import java.io.File;
import java.util.ArrayList;

public class FileIO {
    public ArrayList<String> readMoviesFile(){
        File file = new File("Data/Movies.txt");
    }
}
