public class User {

    private String userName;
    private String password;



    private static int ID;

    public User(String userName, String password){
        this.userName = userName;
        this.password = password;

    }

    public String getUserName() {
        return userName;
    }

    public String getPassword() {
        return password;
    }


}
